[metadata]
name = tornado-problem-details
version = 0.0.6.dev1
description = RFC-7807 Error Documents for Tornado
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/dave-shawley/tornado-problem-details
author = Dave Shawley
author_email = daveshawley@gmail.com
license = BSD 3-Clause
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Software Development :: Libraries
    Typing :: Typed

[options]
install_requires =
    tornado >= 6
packages =
    problemdetails

[options.extras_require]
dev =
    coverage==6.4.1
    flake8==4.0.1
    flake8-fixme==1.1.1
    flake8-print==5.0.0
    pytest==7.1.2
    python-docs-theme==2022.1
    readme-renderer==35.0
    sphinx==4.3.2
    twine==4.0.1
    wheel>=0.37.1
    yapf==0.26.0

[bdist_wheel]
universal = yes

[build_sphinx]
build-dir = build/sphinx
config-dir = docs
source-dir = docs
warning-is-error = yes

[coverage:report]
show_missing = true

[coverage:run]
branch = true
source = problemdetails

[flake8]
exclude =
    build
    dist
    env
